# fastApi

./: pyproject.toml
config/: kernel.py
infrastructure/: routes.py
